--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "^4.2.95",
+    "axios": "^0.19.0",
     "buefy": "^0.8.2",
     "bulma-extensions": "^6.2.7",
     "core-js": "^2.6.5",
